fix(website): remove search button background on small screen (#309)

--- a/website/.vitepress/theme/style.css
+++ b/website/.vitepress/theme/style.css
@@ -23,10 +23,12 @@ body .Layout .VPLocalNav {
   }
 }
 
-iframe {
-  border-width: 0;
+@media (min-width: 768px) {
+  #local-search > .DocSearch-Button {
+    background: rgba(150, 150, 150, 0.08);
+  }
 }
 
-#local-search > .DocSearch-Button {
-  background: rgba(150, 150, 150, 0.08);
+iframe {
+  border-width: 0;
 }
